Text alignment issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,10 +95,6 @@ div#content #map {
 	position:relative;
 }
 
-div#content p {
-	margin-left:10px;
-}
-
 div#content form {
 	margin-left:10px;
 }
